src/objects/Chapter_Role__c.object
<CustomObject>
    <description>This custom object stores the Roles that the Chapter offers.</description>
    <fields>
        <fullName>Background_Check_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify whether the background check is required or not</description>
        <label>Background Check Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the chapter details and role for this chapter.</description>
        <label>Chapter Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chapter Roles</relationshipLabel>
        <relationshipName>Chapter_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the role name and chapters assigned for this role.</description>
        <label>Role Name</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Chapter Roles</relationshipLabel>
        <relationshipName>Chapter_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>It holds the Role Name</description>
        <label>Hidden Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Chapter Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Background_Check_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Chapter Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapter Roles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>